--- a/index.html
+++ b/index.html
@@ -118,6 +118,43 @@
         </div>
 
 
+        
+
+        
+        <div class="box">
+
+
+
+            <div class="boxleft">
+
+                <div id="boximg">
+                    <h1>JS</h1>
+                </div>
+
+
+
+            </div>
+
+
+
+
+            <div class="boxright">
+
+                <h2>Javascript</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis iusto, debitis unde voluptate,
+                    repellendus voluptatum voluptates provident aliquid dignissimos est a deserunt? Cupiditate ullam
+                    laudantium, ut totam <br> odio accusamus autem qui quidem aut laboriosam!</p>
+
+                <div class="bot">
+                    <p>Course Details</p>
+                    <p> Continue</p>
+                </div>
+
+
+            </div>
+
+
+        </div>
 
 
 
